Fixed z-index

--- a/LiveTL/index.css
+++ b/LiveTL/index.css
@@ -58,7 +58,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 #handleH {
